continue creating modules